Restore RSSI indicators to Web Bluetooth chooser dialog

This partially reverts the changes made in commit 9e098bcbd1252eeda8747f
in order to restore the RSSI indicators in the Web Bluetooth chooser
dialog. The return value of ShouldShowIconBeforeText() cannot change
because the views::TableView has no way of changing its layout after
creation.

Bug: 846879
Change-Id: I81c9e90997b1a6f9143b571d0b17395653832ac1
Reviewed-on: https://chromium-review.googlesource.com/1083219
Reviewed-by: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Commit-Queue: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564119}