chrome/browser/chooser_controller/fake_bluetooth_chooser_controller.cc
@@ -20,7 +20,7 @@ FakeBluetoothChooserController::FakeBluetoothChooserController(
 FakeBluetoothChooserController::~FakeBluetoothChooserController() {}
 
 bool FakeBluetoothChooserController::ShouldShowIconBeforeText() const {
-  return devices_.size() > 0;
+  return true;
 }
 
 bool FakeBluetoothChooserController::ShouldShowReScanButton() const {
